--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>2 Fast 2 Curious</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <div id="app"></div>
 
   <script type="text/javascript" src="/static/bundle.js"></script>
 </body>
