--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>2 Fast 2 Curious</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="/static/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/static/main.css">
 </head>
 <body>
   <div id="app"></div>
